==========
Change Log
==========

UNRELEASED
==========

Additions:
----------

- Add RATELIMIT_IP_META_KEY setting (#218)

Minor changes:
--------------

- Factor up _get_ip() logic into a single place (#218)
- Exception on empty REMOTE_ADDR is clearer (#220)

3.0.1
=====

Bug fixes
---------

- Fix import path values for rate= argument (#206)

3.0
====

Breaking changes:
-----------------

- Drop Python 2 support (#167)
- Drop Django < 2.1 support (#167, #198)
- @ratelimit no longer directly supports class methods, use
  @method_decorator
- Drop RatelimitMixin in favor of @method_decorator
- Moved is_ratelimited to ratelimit.core from ratelimit.utils
- Moved ratelimit.utils.get_usage_count to ratelimit.core.get_usage

Additions:
----------

- Made ratelimit.core.get_usage a documented, public method.
- Add IP address masking (#178)
- Add "Recipes" section to documentation

Minor changes:
--------------

- Update RatelimitMiddleware to modern style (#168)
- Refactor is_ratelimited and get_usage so is_ratelimited is a thinner
  wrapper

v2.0.0
======

- A number of docs fixes
- Fail open when cache is unavailable
- Drop support for Django 1.8, 1.9, and 1.10
- Fix Django 2.0 compatibility and update documentation
- Test Django 2.1 support

v1.1.0
======

- Test against Django 1.11 and 2.0b
- Fix #85, explicitly set cache expiration slightly longer than cache
  window.
- Add Django version classifiers.

v1.0.1
======

- Added Django 1.10 support.

v1.0.0
======

- Allow requests through when cache backend is unavailable.
- Add support for Django 1.9, drop support for Django <=1.7.
- Fix several small documentation issues.
- Fix support for missing headers.

v0.6
====

- Fix CBV inheritance.
- Better Django 1.8 support, fixing deprecation warnings and testing.
- Clean up some out-of-date docs.
- Fix counting behavior around increment and new cache keys.
- Correctly pass `group` to callable `key`s.

v0.5
====
